--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "dist/main.js",
   "engines": {
-    "node": "v16.13.1"
+    "node": "v16.13.x"
   },
   "scripts": {
     "dev": "ts-node src/main.ts",
