Adjust for csv-stringify@5.6.5

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
   "extends": "@tsconfig/node16/tsconfig.json",
   "compilerOptions": {
     "baseUrl": ".",
+    "esModuleInterop": true,
     "types": ["node", "jest"]
   }
 }
